--- a/public/css/app.css
+++ b/public/css/app.css
@@ -64,7 +64,12 @@
 }
 
 .theme--dark.shadow-blur-submit-btn {
-  box-shadow: inset 0 0 0px 0px rgba(30, 135, 74, 0.9), 0 4px 4px 0 rgba(48, 164, 96, 0.2) !important;
+  box-shadow: inset 0 0 0px 0px rgba(4, 82, 217, 0.9), 0 4px 4px 0 rgba(4, 82, 217, 0.2) !important;
+}
+
+.theme--dark.success_color {
+  background: rgb(144, 255, 51);
+  background: linear-gradient(183deg, rgb(144, 255, 51) 0%, rgb(14, 172, 175) 100%);
 }
 
 .theme--dark.shadow-blur-card {
