--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -26,6 +26,14 @@ $line-height-base: 1.6;
     background-color: #0b131f;
 }
 
+.theme--dark.v-picker__body {
+    background-color: #101B2D;
+}
+
+.theme--dark.v-time-picker-clock {
+    background-color: #0b131f;
+}
+
 .theme--dark.v-pagination.button {
     background-color: #101B2D
 }
