--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -5,7 +5,7 @@ $line-height-base: 1.6;
 
 // custom props
 .theme--dark.v-application {
-    background: linear-gradient(#0b1424,#000000);
+    background: linear-gradient(#080e1a,#000000);
 }
 
 .v-data-table__wrapper > table > tbody > tr:hover {
